--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1>Hello World</h1>
     <!--https://fontawesome.com/search?o=r&m=free-->
     <!--Script -->
     <script src="script.js"></script>
