Adds styles for font & background

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title> Quote Generator</title>
     <!--enter website doman after domain=mo.desgn as an example-->
     <link
       rel="icon"
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
+    <div class="quote-container" id="quote-container"></div>
     <!--https://fontawesome.com/search?o=r&m=free-->
     <!--Script -->
     <script src="script.js"></script>
