--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <!-- Author -->
       <div class="quote-author">
-        <span id="author">anonymous</span>
+        <span id="author">-Anonymous</span>
       </div>
       <!-- Buttons -->
       <div class="button-container">
