--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </div>
     <!--https://fontawesome.com/search?o=r&m=free-->
     <!--Script -->
+    <script src="quotes.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
