implements dynamic text with corrasponding Constants. Populates textContext of author & text elements.

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <!-- Quote  -->
       <div class="quote-text">
         <i class="fas fa-quote-left"></i>
-        <span id="quote">A creature of magic, with feathers so tragic. I bring omens and signs, predicting the wizard's designs. What am I?</span>
+        <span id="quote"></span>
       </div>
       <!-- Author -->
       <div class="quote-author">
-        <span id="author">-Anonymous</span>
+        <span id="author"></span>
       </div>
       <!-- Buttons -->
       <div class="button-container">
