--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <!-- Buttons -->
       <div class="button-container">
-        <button class="twitter-button" id="twiter" title="Tweet This!">
+        <button class="twitter-button" id="twitter" title="Tweet This!">
           <i class="fab fa-twitter"></i>
         </button>
         <button id="new-quote">New Quote</button>
